<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5dip">
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
	    <Button 
		    android:id="@+id/post_weibo"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:padding="5dip"
		    android:gravity="center_horizontal"
		    android:textSize="18sp"
		    android:text="@string/post_weibo"
		    />
		<Button 
		    android:id="@+id/view_nearbypeople"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:padding="5dip"
		    android:gravity="center_horizontal"
		    android:textSize="18sp"
		    android:text="@string/nearbypeople"
		    />
		<Button 
		    android:id="@+id/view_nearbyweibo"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:padding="5dip"
		    android:gravity="center_horizontal"
		    android:textSize="18sp"
		    android:text="@string/nearbyweibo"
		    />
		<Button 
		    android:id="@+id/view_userinfo"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:padding="5dip"
		    android:gravity="center_horizontal"
		    android:textSize="18sp"
		    android:text="@string/userinfo"
		    />
		<Button 
		    android:id="@+id/view_usertrends"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:padding="5dip"
		    android:gravity="center_horizontal"
		    android:textSize="18sp"
		    android:text="@string/usertrends"
		    />
		<Button 
		    android:id="@+id/view_pageinfo"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:padding="5dip"
		    android:gravity="center_horizontal"
		    android:textSize="18sp"
		    android:text="@string/pageinfo"
		    />
		<Button 
		    android:id="@+id/view_pagedetailinfo"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:padding="5dip"
		    android:gravity="center_horizontal"
		    android:textSize="18sp"
		    android:text="@string/pagedetailinfo"
		    />
		<Button 
		    android:id="@+id/view_pageuserlist"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:padding="5dip"
		    android:gravity="center_horizontal"
		    android:textSize="18sp"
		    android:text="@string/pageuserlist"
		    />
		<Button 
		    android:id="@+id/view_pageweibolist"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:padding="5dip"
		    android:gravity="center_horizontal"
		    android:textSize="18sp"
		    android:text="@string/pageweibolist"
		    />
		<Button 
		    android:id="@+id/view_pagephotolist"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:padding="5dip"
		    android:gravity="center_horizontal"
		    android:textSize="18sp"
		    android:text="@string/pagephotolist"
		    />
		<Button 
		    android:id="@+id/view_pageproductlist"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:padding="5dip"
		    android:gravity="center_horizontal"
		    android:textSize="18sp"
		    android:text="@string/pageproductlist"
		    />
		<Button 
		    android:id="@+id/open_in_weibobrowser"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:padding="5dip"
		    android:gravity="center_horizontal"
		    android:textSize="18sp"
		    android:text="@string/weibobrowser"
		    />
		<Button 
		    android:id="@+id/display_in_weibomap"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:padding="5dip"
		    android:gravity="center_horizontal"
		    android:textSize="18sp"
		    android:text="@string/weibomap"
		    />
		
<Button 
		    android:id="@+id/open_qrcode_scanner"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:padding="5dip"
		    android:gravity="center_horizontal"
		    android:textSize="18sp"
		    android:text="@string/qrcode"
		    />
<Button 
		    android:id="@+id/open_nearphotolist"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:padding="5dip"
		    android:gravity="center_horizontal"
		    android:textSize="18sp"
		    android:text="@string/nearphotolist"
		    />
<Button 
		    android:id="@+id/open_poipage"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:padding="5dip"
		    android:gravity="center_horizontal"
		    android:textSize="18sp"
		    android:text="@string/poipage"
		    />
<Button 
		    android:id="@+id/open_poiphotolist"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:padding="5dip"
		    android:gravity="center_horizontal"
		    android:textSize="18sp"
		    android:text="@string/poiphotolist"
		    />
<Button 
		    android:id="@+id/open_mblogdetail"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:padding="5dip"
		    android:gravity="center_horizontal"
		    android:textSize="18sp"
		    android:text="@string/mblogdetail"
		    />
	</LinearLayout>
</ScrollView>